[package]
name = "axum_tries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.3"}
hyper = {version = "0.14", features = ["full"]}
tokio = {version = "1.13", features = ["full"]}
tower = "0.4"
pin-project = "1.0.8"
futures = "0.3"